--- a/src/stylus/components/_tooltips.styl
+++ b/src/stylus/components/_tooltips.styl
@@ -2,8 +2,8 @@
   position: relative
   
   &:before
-    background: $grey.darken-2
-    border-radius: 2px
+    background: #464646
+    border-radius: 0
     color: #FFFFFF
     content: attr(data-tooltip)
     font-size: 12px
@@ -13,15 +13,30 @@
     position: absolute
     pointer-events: none
     text-transform: initial
-    transition: .15s $transition.swing
+    // transition: .15s $transition.swing
     width: auto
     white-space: pre
     z-index: 99
-    elevation(2)
+    box-shadow: -3px 3px 3px -2px rgba(0,0,0,.4)
+
+  &:after
+    background: #464646
+    content: ""
+    border-style: solid
+    border-width: 7px 0px 7px 7px
+    border-top-color: rgb(25,140,220)
+    border-right-color: rgb(25,140,220)
+    border-bottom-color: rgb(25,140,220)
+    border-left-color: #464646
+    position: absolute
+    left: -5px
+    opacity: 0
 
   &:hover
     &:before
-      opacity: 0.9
+      opacity: 1
+    &:after
+      opacity: 1
     
   &[data-tooltip-location='bottom']
     &:before
@@ -53,7 +68,7 @@
       
     &:hover
       &:before
-        transform: translate3d(-14px, 0, 0) scale(1)
+        transform: translate3d(-3px, 0, 0) scale(1)
       
   &[data-tooltip-location='right']
     &:before
@@ -82,7 +97,7 @@
     &[data-tooltip-location='left']
       &:hover
         &:before
-          transform: translate3d(-24px, 0, 0) scale(1)
+          transform: translate3d(-3px, 0, 0) scale(1)
       
     &[data-tooltip-location='right']
       &:hover
